# storage/api-docs/api-docs.yaml
@@ -140,6 +140,30 @@ paths:
                 $ref: 'posts-components.yaml#/SearchPostResponse'
         "500":
           $ref: '#/components/responses/ServerError'
+  /suggests:search:
+    post:
+      tags:
+        - posts
+      operationId: postElasticsearchPost
+      x-lg-handler: 'App\Http\Controllers\PostController@searchByElastic'
+      x-lg-skip-request-generation: true
+      summary: Поиск постов в индексе ElasticSearch
+      description: Поиск постов в индексе ElasticSearch
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: 'posts-components.yaml#/ElasticSearchPostRequest'
+      responses:
+        "200":
+          description: Успешный ответ
+          content:
+            application/json:
+              schema:
+                $ref: 'posts-components.yaml#/SearchPostResponse'
+        "500":
+          $ref: '#/components/responses/ServerError'
 
 components:
   parameters:
